# rustskew

./: .gitignore  CLAUDE.md  Cargo.toml  DIX.csv  RESEARCH_NOTES.md
.github/workflows/: collect.yml
data/: fred_credit_hy.csv  fred_credit_ig.csv  gamma_SPX.csv  gamma_VIX.csv  ohlc_spx.csv  signals.csv
data/snap/SPX/: 2026-06-12.csv  2026-06-13.csv  2026-06-15.csv  2026-06-16.csv  2026-06-17.csv  2026-06-18.csv  2026-06-19.csv  2026-06-22.csv  2026-06-23.csv  2026-06-24.csv  2026-06-25.csv  2026-06-26.csv  2026-06-29.csv  2026-06-30.csv  2026-07-01.csv
data/snap/VIX/: 2026-06-12.csv  2026-06-13.csv  2026-06-15.csv  2026-06-16.csv  2026-06-17.csv  2026-06-18.csv  2026-06-19.csv  2026-06-22.csv  2026-06-23.csv  2026-06-24.csv  2026-06-25.csv  2026-06-26.csv  2026-06-29.csv  2026-06-30.csv  2026-07-01.csv
ml/: advanced_features.py  build_features.py  creative_features.py  ephemeris.py  fetch_data.py  gen_signals.py  hmm_features.py  physics_features.py  train.py  wavelet_features.py
src/: bs.rs  bt.rs  cboe.rs  chart.rs  dates.rs  fetch.rs  fred.rs  hedge.rs  main.rs  price.rs  serve.rs  skew.rs  svi.rs
