[package]
name = "skew"
version = "0.1.0"
edition = "2021"
description = "Compute SPX/SPY 25-delta synthetic-30DTE volatility skew from option chains and study its relationship with index drawdowns"

[[bin]]
name = "skew"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 2
